--- a/src/content/docs/introduction.mdx
+++ b/src/content/docs/introduction.mdx
@@ -7,7 +7,7 @@ import { WrenchIcon, LightBulbIcon } from "@heroicons/react/24/outline";
 <AppScreenshot />
 
 <Callout emoji="🚨">
-  These docs are highly incomplete and are a continuous work in progress. Please
+  These docs might be incomplete in some areas and are a continuous work in progress. Please
   help us by contributing to the project or by providing feedback.
 </Callout>
 
