--- a/src/content/docs/apps-available.mdx
+++ b/src/content/docs/apps-available.mdx
@@ -1,6 +1,10 @@
-import { AppsList } from "@/app/components/AppsList";
+import { AppsList } from "@/app/components/apps-list";
 import { Cards } from "nextra/components";
-import { ArrowRightIcon, PlusCircleIcon, WrenchIcon } from "@heroicons/react/24/outline";
+import {
+  ArrowRightIcon,
+  PlusCircleIcon,
+  WrenchIcon,
+} from "@heroicons/react/24/outline";
 
 # Apps available
 
